fix: WorkingMansTableCell text align

--- a/src/4widgets/workingMansTable/ui/WorkingMansTableCell.module.scss
+++ b/src/4widgets/workingMansTable/ui/WorkingMansTableCell.module.scss
@@ -1,5 +1,6 @@
 .WorkingMansTableCell {
   border: solid 1px black;
+  vertical-align: bottom;
 
   &.Q1 {
     background-color: var(--FIRST_QUARTER);
